<?xml version="1.0" encoding="utf-8"?>


<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".main.MainActivity">

    <android.support.constraint.ConstraintLayout
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#FFFFFF"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/allCheck"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintEnd_toStartOf="@+id/editText"
                android:layout_marginEnd="8dp"/>
        <EditText
                android:id="@+id/editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:inputType="text"
                android:hint="@string/hint"
                app:layout_constraintStart_toEndOf="@+id/allCheck"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintEnd_toStartOf="@+id/add" android:layout_marginEnd="8dp"/>
        <Button
                android:text="@string/button_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/add"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintStart_toEndOf="@+id/editText"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                style="@style/Widget.AppCompat.Button"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:padding="5dp"
                android:background="#ffffff"
                app:layout_constraintCircleRadius="5dp"
                android:textAllCaps="false"
                android:textSize="12sp"

        />

    </android.support.constraint.ConstraintLayout>

        <include
                android:id="@+id/include"
                layout="@layout/content_main"
                android:layout_width="0dp"
                android:layout_height="0dp"
                ads:layout_constraintBottom_toTopOf="@+id/bottom"
                ads:layout_constraintEnd_toEndOf="parent"
                ads:layout_constraintStart_toStartOf="parent"
                ads:layout_constraintTop_toBottomOf="@+id/top" />

    <android.support.constraint.ConstraintLayout
            android:id="@+id/bottom"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">


        <TextView
                android:text="@string/left_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/leftNum"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/all" android:layout_marginEnd="8dp"/>
        <Button
                android:text="@string/button_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:padding="5dp"
                android:id="@+id/all"
                app:layout_constraintCircleRadius="5dp"
                app:layout_constraintTop_toTopOf="parent"
                android:textAllCaps="false"
                android:textSize="12sp"
                android:layout_marginTop="8dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toEndOf="@+id/leftNum"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/active"
                android:layout_marginEnd="8dp" android:background="#dcdcdc"/>
        <Button
                android:text="@string/button_active"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:padding="5dp"
                android:id="@+id/active"
                android:background="#ffffff"
                ads:layout_constraintCircleRadius="5dp"
                app:layout_constraintStart_toEndOf="@+id/all"
                android:textAllCaps="false"
                android:textSize="12sp"
                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toStartOf="@+id/completed"
                android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"/>
        <Button
                android:text="@string/button_competed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:padding="5dp"
                android:id="@+id/completed"
                android:background="#ffffff"
                ads:layout_constraintCircleRadius="5dp"
                app:layout_constraintStart_toEndOf="@+id/active"
                android:textAllCaps="false"
                android:textSize="12sp"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/clear"
                android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"/>
        <Button
                android:text="@string/button_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:padding="5dp"
                android:id="@+id/clear"
                android:background="#ffffff"
                ads:layout_constraintCircleRadius="5dp"
                app:layout_constraintStart_toEndOf="@+id/completed"
                android:textAllCaps="false"
                android:textSize="12sp"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:visibility="invisible"/>
    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>